Apply fixes for rimg to other image aligns

--- a/web/js/index.scss
+++ b/web/js/index.scss
@@ -1,6 +1,6 @@
 @import 'css/system';
 
-.rimg img, .scp-image-block img {
+.rimg img, .limg img, .cimg img, .img img, .scp-image-block img {
   // compatibility patch for some unobvious stuff that started working differently after moving away from XHTML
   // https://stackoverflow.com/questions/10844205/html-5-strange-img-always-adds-3px-margin-at-bottom
   vertical-align: middle;
